feat: make CORS origins configurable